force-app/main/default/objects/NF_Theme__c/NF_Theme__c.object-meta.xml
<CustomObject>
    <description>Reusable TwinaForms theme definition assigned to forms.</description>
    <label>NF Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NF Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>