force-app/main/default/objects/NF_Theme__c/fields/Background_Gradient_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Gradient_Color__c</fullName>
    <label>Background Gradient Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>