force-app/main/default/objects/NF_Theme__c/fields/Background_Image_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_Content_Document_Id__c</fullName>
    <label>Background Image Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>