force-app/main/default/objects/NF_Theme__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <label>Background Image URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>