force-app/main/default/objects/NF_Theme__c/fields/Button_Font__c.field-meta.xml
<CustomField>
    <fullName>Button_Font__c</fullName>
    <label>Button Font</label>
    <length>80</length>
    <type>Text</type>
</CustomField>