force-app/main/default/objects/NF_Theme__c/fields/Button_Font_Size_Px__c.field-meta.xml
<CustomField>
    <fullName>Button_Font_Size_Px__c</fullName>
    <label>Button Font Size Px</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>