force-app/main/default/objects/NF_Theme__c/fields/Button_Hover_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Button_Hover_Background_Color__c</fullName>
    <label>Button Hover Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>