force-app/main/default/objects/NF_Theme__c/fields/Error_Color__c.field-meta.xml
<CustomField>
    <fullName>Error_Color__c</fullName>
    <label>Error Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>