force-app/main/default/objects/NF_Theme__c/fields/Footer_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Footer_Image_URL__c</fullName>
    <label>Footer Image URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>