force-app/main/default/objects/NF_Theme__c/fields/Form_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Form_Background_Color__c</fullName>
    <label>Form Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>