force-app/main/default/objects/NF_Theme__c/fields/Form_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Form_Border_Color__c</fullName>
    <label>Form Border Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>