force-app/main/default/objects/NF_Theme__c/fields/Form_Width__c.field-meta.xml
<CustomField>
    <fullName>Form_Width__c</fullName>
    <label>Form Width</label>
    <length>40</length>
    <type>Text</type>
</CustomField>