force-app/main/default/objects/NF_Theme__c/fields/Hint_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Hint_Text_Color__c</fullName>
    <label>Hint Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>