force-app/main/default/objects/NF_Theme__c/fields/Input_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Input_Background_Color__c</fullName>
    <label>Input Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>