force-app/main/default/objects/NF_Theme__c/fields/Input_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Input_Border_Color__c</fullName>
    <label>Input Border Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>