force-app/main/default/objects/NF_Theme__c/fields/Input_Border_Radius_Px__c.field-meta.xml
<CustomField>
    <fullName>Input_Border_Radius_Px__c</fullName>
    <label>Input Border Radius Px</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>