force-app/main/default/objects/NF_Theme__c/fields/Link_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Link_Text_Color__c</fullName>
    <label>Link Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>