force-app/main/default/objects/NF_Theme__c/fields/Logo_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Content_Document_Id__c</fullName>
    <label>Logo Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>