force-app/main/default/objects/NF_Theme__c/fields/Logo_Position__c.field-meta.xml
<CustomField>
    <fullName>Logo_Position__c</fullName>
    <label>Logo Position</label>
    <length>40</length>
    <type>Text</type>
</CustomField>