force-app/main/default/objects/NF_Theme__c/fields/Logo_Size_Px__c.field-meta.xml
<CustomField>
    <fullName>Logo_Size_Px__c</fullName>
    <label>Logo Size Px</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>