force-app/main/default/objects/NF_Theme__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>