force-app/main/default/objects/NF_Theme__c/fields/Main_Font__c.field-meta.xml
<CustomField>
    <fullName>Main_Font__c</fullName>
    <label>Main Font</label>
    <length>80</length>
    <type>Text</type>
</CustomField>