force-app/main/default/objects/NF_Theme__c/fields/Main_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Main_Text_Color__c</fullName>
    <label>Main Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>