force-app/main/default/objects/NF_Theme__c/fields/Main_Text_Size_Px__c.field-meta.xml
<CustomField>
    <fullName>Main_Text_Size_Px__c</fullName>
    <label>Main Text Size Px</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>