force-app/main/default/objects/NF_Theme__c/fields/Section_Title_Font__c.field-meta.xml
<CustomField>
    <fullName>Section_Title_Font__c</fullName>
    <label>Section Title Font</label>
    <length>80</length>
    <type>Text</type>
</CustomField>