force-app/main/default/objects/NF_Theme__c/fields/Title_Font__c.field-meta.xml
<CustomField>
    <fullName>Title_Font__c</fullName>
    <label>Title Font</label>
    <length>80</length>
    <type>Text</type>
</CustomField>