force-app/main/default/objects/NF_Theme__c/fields/Title_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Title_Text_Color__c</fullName>
    <label>Title Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>