force-app/main/default/objects/NF_Theme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Form_Width__c</columns>
    <columns>Title_Font__c</columns>
    <columns>Main_Font__c</columns>
    <columns>Logo_Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>